Updated template to soundcrib setup

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,23 +1,38 @@
-<div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#/">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
-</div>
-
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
-
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
-
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
-</div>
+<!-- Two -->
+  <section id="two">
+    <h2>Artists</h2>
+    <div class="row">
+      <article class="6u 12u$(xsmall) artist">
+        <a href="https://soundcloud.com/asap-rocky/sets/liveloveasap" class="image fit thumb"><img src="images/artists/asap-rocky.jpg" alt="" /></a>
+        <h3>A$AP Rocky</h3>
+      </article>
+      <article class="6u$ 12u$(xsmall) artist">
+        <a href="images/artists/brandon-flowers.jpg" class="image fit thumb"><img src="images/artists/brandon-flowers.jpg" alt="" /></a>
+        <h3>Brandon Flowers</h3>
+        <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+      </article>
+      <article class="6u 12u$(xsmall) artist">
+        <a href="images/artists/flume.png" class="image fit thumb"><img src="images/artists/flume.png" alt="" /></a>
+        <h3>Flume</h3>
+        <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+      </article>
+      <article class="6u$ 12u$(xsmall) artist">
+        <a href="images/artists/diplo.png" class="image fit thumb"><img src="images/artists/diplo.png" alt="" /></a>
+        <h3>Diplo</h3>
+        <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+      </article>
+      <article class="6u 12u$(xsmall) artist">
+        <a href="images/artists/krewella.png" class="image fit thumb"><img src="images/artists/krewella.png" alt="" /></a>
+        <h3>Krewella</h3>
+        <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+      </article>
+      <article class="6u$ 12u$(xsmall) artist">
+        <a href="images/artists/kendrick-lamar.jpg" class="image fit thumb"><img src="images/artists/kendrick-lamar.jpg" alt="" /></a>
+        <h3>Kendrick Lamar</h3>
+        <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+      </article>
+    </div>
+    <!-- <ul class="actions">
+      <li><a href="#" class="button">Full Portfolio</a></li>
+    </ul> -->
+  </section>
