--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,5 +1,5 @@
 <!-- Two -->
-  <section id="two">
+<!--   <section id="two">
     <h2>Artists</h2>
     <div class="row">
       <article class="6u 12u$(xsmall) artist">
@@ -34,5 +34,7 @@
     </div>
     <!-- <ul class="actions">
       <li><a href="#" class="button">Full Portfolio</a></li>
-    </ul> -->
-  </section>
+    </ul>
+  </section> -->
+
+<h2>Coming Soon</h2>
