Added new artist setup with ng-repeat and object storage

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,40 +1,65 @@
 <!-- Two -->
-<!--   <section id="two">
+  <section id="two">
     <h2>Artists</h2>
     <div class="row">
-      <article class="6u 12u$(xsmall) artist">
-        <a href="https://soundcloud.com/asap-rocky/sets/liveloveasap" class="image fit thumb"><img src="images/artists/asap-rocky.jpg" alt="" /></a>
-        <h3>A$AP Rocky</h3>
-      </article>
-      <article class="6u$ 12u$(xsmall) artist">
-        <a href="images/artists/brandon-flowers.jpg" class="image fit thumb"><img src="images/artists/brandon-flowers.jpg" alt="" /></a>
-        <h3>Brandon Flowers</h3>
-        <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-      </article>
-      <article class="6u 12u$(xsmall) artist">
-        <a href="images/artists/flume.png" class="image fit thumb"><img src="images/artists/flume.png" alt="" /></a>
-        <h3>Flume</h3>
-        <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-      </article>
-      <article class="6u$ 12u$(xsmall) artist">
-        <a href="images/artists/diplo.png" class="image fit thumb"><img src="images/artists/diplo.png" alt="" /></a>
-        <h3>Diplo</h3>
-        <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-      </article>
-      <article class="6u 12u$(xsmall) artist">
-        <a href="images/artists/krewella.png" class="image fit thumb"><img src="images/artists/krewella.png" alt="" /></a>
-        <h3>Krewella</h3>
-        <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-      </article>
-      <article class="6u$ 12u$(xsmall) artist">
-        <a href="images/artists/kendrick-lamar.jpg" class="image fit thumb"><img src="images/artists/kendrick-lamar.jpg" alt="" /></a>
-        <h3>Kendrick Lamar</h3>
-        <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+      <article ng-repeat="artist in artists" class="6u 12u$(xsmall) artist">
+        <a href="{{artist.img_url}}" class="image fit thumb"><img src="{{artist.img_url}}" alt="{{artist.name}}" /></a>
+        <h3>{{artist.name}}</h3>
       </article>
     </div>
-    <!-- <ul class="actions">
+    <ul class="actions">
       <li><a href="#" class="button">Full Portfolio</a></li>
     </ul>
-  </section> -->
+  </section>
 
-<h2>Coming Soon</h2>
+  <div ng-repeat="artist in artists" class="fullPagePlayer">
+    <span class="closer"></span>
+    <div plangular="{{artist.url}}" class="artistPlayer mb3 bg-darken-2 rounded">
+      <div class="p2">
+        <div class="flex flex-center">
+          <samp class="h6">{{ currentTime | hhmmss }} / {{ duration | hhmmss }}</samp>
+        </div>
+        <h3 class="h1 caps mt0">{{playlist.title}}</h3>
+        <div class="flex flex-center">
+          <button class="flex-none h3 button button-narrow button-transparent button-grow rounded"
+            title="Play Previous Track"
+            ng-click="previous()">
+            <svg class="icon geomicon" data-icon="previous" viewBox="0 0 32 32" style="fill:currentcolor"><path d="M4 4 H8 V14 L28 4 V28 L8 18 V28 H4 z "></path></svg>
+          </button>
+          <button class="flex-none h1 button button-transparent button-grow rounded"
+            title="Play/Pause"
+            ng-click="playPause(index)">
+            <svg ng-if="player.playing !== track.src" class="icon geomicon" data-icon="play" viewBox="0 0 32 32" width="32" height="32" style="fill:currentcolor"><path d="M4 4 L28 16 L4 28 z "></path></svg>
+            <svg ng-if="player.playing === track.src" class="icon geomicon" data-icon="pause" viewBox="0 0 32 32" width="32" height="32" style="fill:currentcolor"><path d="M4 4 H12 V28 H4 z M20 4 H28 V28 H20 z "></path></svg>
+          </button>
+          <button class="flex-none h3 button mr2 button-narrow button-transparent button-grow rounded"
+            title="Play Next Track"
+            ng-click="next()">
+            <svg class="icon geomicon" data-icon="next" viewBox="0 0 32 32" style="fill:currentcolor"><path d="M4 4 L24 14 V4 H28 V28 H24 V18 L4 28 z "></path></svg>
+          </button>
+          <progress
+            class="progress"
+            ng-click="seek($event)"
+            ng-value="currentTime / duration || 0">
+            {{ currentTime / duration }}
+          </progress>
+        </div>
+      </div>
+      <ul class="list-reset">
+        <li ng-repeat="track in tracks">
+          <button
+            class="flex flex-center full-width left-align button button-transparent"
+            title="Play {{track.title}}"
+            ng-class="{'is-active': player.playing === track.src }"
+            ng-click="playPause($index)">
+            <span class="custom-flex-auto">
+              {{track.user.username}} - {{track.title}}
+            </span>
+            <span class="h6">
+              {{ track.duration / 1000 | hhmmss }}
+            </span>
+          </button>
+        </li>
+      </ul>
+    </div>
+  </div>
