Updated artist image reference

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -3,7 +3,7 @@
     <h2>Artists</h2>
     <div class="row">
       <article ng-repeat="artist in artists" class="6u 12u$(xsmall) artist">
-        <a href="{{artist.img_url}}" class="image fit thumb"><img src="{{artist.img_url}}" alt="{{artist.name}}" /></a>
+        <a href="{{artist.imgURL}}" class="image fit thumb"><img src="{{artist.imgURL}}" alt="{{artist.name}}" /></a>
         <h3>{{artist.name}}</h3>
       </article>
     </div>
