Add custom player styles, sticky controls, angular show/hide for artists and minor mobile optimizations

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -2,18 +2,15 @@
   <section id="two">
     <h2>Artists</h2>
     <div class="row">
-      <article ng-repeat="artist in artists" class="6u 12u$(xsmall) artist">
-        <a href="{{artist.imgURL}}" class="image fit thumb"><img src="{{artist.imgURL}}" alt="{{artist.name}}" /></a>
+      <article ng-repeat="artist in artists" ng-click="artist.active = true" class="6u 12u$(xsmall) artist">
+        <a class="image fit thumb"><img src="{{artist.imgURL}}" alt="{{artist.name}}" /></a>
         <h3>{{artist.name}}</h3>
       </article>
     </div>
-    <ul class="actions">
-      <li><a href="#" class="button">Full Portfolio</a></li>
-    </ul>
   </section>
 
-  <div ng-repeat="artist in artists" class="fullPagePlayer">
-    <span class="closer"></span>
+  <div ng-repeat="artist in artists" ng-show="artist.active" class="fullPagePlayer">
+    <span ng-click="artist.active = false" class="closer"></span>
     <div plangular="{{artist.url}}" class="soundCribPlayer mb3 bg-darken-2 rounded">
       <div class="p2">
         <div class="flex flex-center">
@@ -29,8 +26,8 @@
           <button class="flex-none h1 action-button button-transparent button-grow rounded"
             title="Play/Pause"
             ng-click="playPause(index)">
-            <svg ng-if="player.playing !== track.src" class="icon geomicon" data-icon="play" viewBox="0 0 32 32" width="32" height="32" style="fill:currentcolor"><path d="M4 4 L28 16 L4 28 z "></path></svg>
-            <svg ng-if="player.playing === track.src" class="icon geomicon" data-icon="pause" viewBox="0 0 32 32" width="32" height="32" style="fill:currentcolor"><path d="M4 4 H12 V28 H4 z M20 4 H28 V28 H20 z "></path></svg>
+            <svg ng-if="player.playing !== track.src" class="icon geomicon" data-icon="play" viewBox="0 0 32 32" style="fill:currentcolor"><path d="M4 4 L28 16 L4 28 z "></path></svg>
+            <svg ng-if="player.playing === track.src" class="icon geomicon" data-icon="pause" viewBox="0 0 32 32" style="fill:currentcolor"><path d="M4 4 H12 V28 H4 z M20 4 H28 V28 H20 z "></path></svg>
           </button>
           <button class="flex-none h3 action-button mr2 button-narrow button-transparent button-grow rounded"
             title="Play Next Track"
