--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,10 +1,149 @@
+.closer {
+  text-decoration: none;
+  -moz-transition: opacity 0.2s ease-in-out;
+  -webkit-transition: opacity 0.2s ease-in-out;
+  -o-transition: opacity 0.2s ease-in-out;
+  -ms-transition: opacity 0.2s ease-in-out;
+  transition: opacity 0.2s ease-in-out;
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+  color: #fff;
+  height: 4em;
+  line-height: 4em;
+  opacity: 1;
+  position: absolute;
+  right: 0;
+  text-align: center;
+  top: 0;
+  width: 4em;
+  z-index: 1000000000;
+  cursor: pointer;
+}
+
+.closer:before {
+  -moz-box-sizing: content-box;
+  -webkit-box-sizing: content-box;
+  -o-box-sizing: content-box;
+  -ms-box-sizing: content-box;
+  box-sizing: content-box;
+  border-radius: 100%;
+  border: solid 3px rgba(255, 255, 255, 0.5);
+  content: '\f00d';
+  display: block;
+  font-size: 1em;
+  height: 1.75em;
+  left: 50%;
+  line-height: 1.75em;
+  margin: -0.875em 0 0 -0.875em;
+  position: absolute;
+  top: 50%;
+  width: 1.75em;
+}
+
+.closer:before {
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  font-family: FontAwesome;
+  font-style: normal;
+  font-weight: normal;
+  text-transform: none !important;
+}
+
+.fullPagePlayer {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 10000000000;
+  width: 100%;
+  height: 100%;
+  background: #111;
+  background: rgba(0,0,0,0.8);
+  overflow-y: scroll;
+}
+
+.progress {
+    display: block;
+    width: 100%;
+    height: .5625rem;
+    margin: .5rem 0;
+    background-color: rgba(0, 0, 0, .0625);
+    border: 0;
+    border-radius: 10000px;
+    overflow: hidden;
+    -webkit-appearance: none;
+    cursor: pointer;
+}
+.progress::-webkit-progress-bar {
+    -webkit-appearance: none;
+    background-color: rgba(0, 0, 0, .0625);
+}
+.progress::-webkit-progress-value {
+    -webkit-appearance: none;
+    background-color: currentColor;
+}
+.progress::-moz-progress-bar {
+    background-color: currentColor;
+}
+.table-light td, .table-light th {
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
+    border-bottom-color: rgba(0, 0, 0, .25);
+}
+
 .is-active {
-  border-color: #49bf9d;
   color: #49bf9d !important;
+  background-color: rgba(255,255,255,0.5) !important;
+}
+
+.stickyControls {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  background-color: #f2f2f2;
+  border-top: 1px solid rgba(0,0,0,.15);
+  z-index: 100000000;
+  padding: 0.5% 4%;
+  @media screen and (max-width: 980px) {
+    width: 100%;
+  }
+  @media screen and (max-width: 1280px) and (min-width:981px) {
+    width: 70%;
+  }
+  @media screen and (min-width: 1281px) {
+    width: 65%;
+  }
+}
+
+.playButtonContainer {
+  height: 2em;
+  float: left;
+  line-height: 3em;
+}
+
+.durationContainer {
+  float:right;
+  width:15%;
+  margin-top:5px;
+}
+
+.playerHead {
+}
+
+.trackList {
+  .trackItem {
+    span {
+      font-size:1.2em;
+    }
+  }
+  .trackTitle {
+    float:left;
+  }
+  .trackDuration {
+    float:right;
+  }
 }
 
 .list-reset {
-  padding: 0.8em 0 0;
+  padding: 0.8em 0;
   li {
     padding:0;
     list-style-type: none;
@@ -13,16 +152,82 @@
 
 .progressContainer {
   progress {
-    width:100%;
+    width: 62%;
+    float: left;
+    margin: 1rem 2%;
   }
 }
 
 .soundCribPlayer {
-  border-radius: 0.35em;
-  background-color: rgba(0,0,0,.0625);
-  padding:4%;
+
 }
 
 .flex-center {
   text-align: center;
+}
+
+.track-button {
+  width: 100%;
+  text-align: left;
+  height: 3em;
+}
+
+input[type="submit"],
+input[type="reset"],
+input[type="button"],
+.track-button {
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  -o-appearance: none;
+  -ms-appearance: none;
+  appearance: none;
+  -moz-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, border-color 0.2s ease-in-out;
+  -webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, border-color 0.2s ease-in-out;
+  -o-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, border-color 0.2s ease-in-out;
+  -ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, border-color 0.2s ease-in-out;
+  transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, border-color 0.2s ease-in-out;
+  background-color: transparent;
+  border: none;
+  color: #787878;
+  cursor: pointer;
+  display: inline-block;
+  font-weight: 400;
+  min-width: 6em;
+  text-decoration: none;
+}
+
+/* Button */
+input[type="submit"],
+input[type="reset"],
+input[type="button"],
+.action-button {
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  -o-appearance: none;
+  -ms-appearance: none;
+  appearance: none;
+  -moz-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, border-color 0.2s ease-in-out;
+  -webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, border-color 0.2s ease-in-out;
+  -o-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, border-color 0.2s ease-in-out;
+  -ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, border-color 0.2s ease-in-out;
+  transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, border-color 0.2s ease-in-out;
+  background-color: transparent;
+  border: none;
+  color: #787878;
+  cursor: pointer;
+  display: inline-block;
+  font-weight: 400;
+  min-width: 2em;
+  padding: 0.2em;
+  margin:0 0.5em;
+  text-align: center;
+  text-decoration: none;
+}
+
+input[type="submit"]:hover,
+input[type="reset"]:hover,
+input[type="button"]:hover,
+.button:hover, .track-button:hover, .action-button:hover {
+  border-color: #49bf9d;
+  color: #49bf9d;
 }
