--- a/app/assets/css/style-xsmall.css
+++ b/app/assets/css/style-xsmall.css
@@ -32,7 +32,7 @@ ul.actions.small li:first-child {
 
 /* Header */
 #header {
-  padding: 4.5em 1.5em;
+  padding: 1.5em;
 }
 #header h1 br {
   display: none;
