--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -494,7 +494,7 @@ input[type="radio"] + label:before {
 }
 .image.fit {
   display: block;
-  margin: 0 0 2em 0;
+  margin: 0 0 0.5em 0;
   width: 100%;
 }
 .image.fit img {
@@ -786,7 +786,7 @@ input[type="button"]:disabled,
 #header {
   background-color: #1f1815;
   background-attachment: scroll,								fixed;
-  background-image: url("../images/overlay.png"), url("../images/bg.jpg");
+  background-image: url("../images/overlay.png"), url("../images/bg-vancity.jpg");
   background-position: top left,							top left;
   background-repeat: repeat,								no-repeat;
   background-size: auto,								auto 100%;
