--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -53,11 +53,15 @@
   top: 0;
   left: 0;
   z-index: 10000000000;
+  padding:4%;
   width: 100%;
   height: 100%;
   background: #111;
-  background: rgba(0,0,0,0.8);
+  background: rgba(0,0,0,0.9);
   overflow-y: scroll;
+    .overlay-track {
+      margin: 0.5em 0;
+    }
 }
 
 .progress {
@@ -146,22 +150,22 @@
   margin-bottom: 0.5em;
 }
 
-.trackList {
-  .trackTitle {
-    float:left;
-    max-width: 250px;
-    font-size:1.3em;
-  }
-  .trackArtist {
-    float:left;
-    clear:left;
-    padding: 5px 0;
-  }
-  .trackDuration {
-    float:right;
-    font-size: 1.1em;
-    line-height: 1.6em;
-  }
+.trackTitle {
+  float:left;
+  max-width: 85%;
+  font-size:1.3em;
+}
+
+.trackArtist {
+  float:left;
+  clear:left;
+  padding: 5px 0;
+}
+
+.trackDuration {
+  float:right;
+  font-size: 1.1em;
+  line-height: 1.6em;
 }
 
 .list-reset {
@@ -187,6 +191,9 @@
     width: 55%;
     float: left;
     margin: 1rem 2%;
+    @media screen and (min-width:768px){
+      width:80%;
+    }
   }
 }
 
