Added new playlist and archieve capability

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,17 +1,81 @@
-<!-- Two -->
-  <section id="two">
-    <h2>Artists</h2>
-    <div class="row">
-      <article ng-repeat="artist in artists" ng-click="artist.active = true" class="6u 12u$(xsmall) artist">
-        <a class="image fit thumb"><img src="{{artist.imgURL}}" alt="{{artist.name}}" /></a>
-        <h3>{{artist.name}}</h3>
-      </article>
-    </div>
-  </section>
+<!-- One -->
+  <section id="one">
+    <header class="major">
 
-  <div ng-repeat="artist in artists" ng-show="artist.active" class="fullPagePlayer">
-    <span ng-click="artist.active = false" class="closer"></span>
-    <div plangular="{{artist.url}}" class="soundCribPlayer mb3 bg-darken-2 rounded">
+    </header>
+
+  <div ng-repeat="mix in mixes" ng-show="mix.defaultMix">
+    <div plangular="{{mix.url}}" class="mb3 bg-darken-2 rounded soundCribPlayer">
+      <div class="playerHead">
+        <h3 class="h1 caps mt0">{{playlist.title}}</h3>
+      </div>
+      <ul class="list-reset trackList">
+        <li class="trackItem" ng-repeat="track in tracks">
+          <div class="track-progress-bar">
+            <div
+            ng-class="{'show-progress': player.playing === track.src }"
+            style="width:{{currentTime / duration * 100 || 0}}%"
+            class="play-bg">
+            </div>
+          </div>
+          <button
+            class="flex flex-center full-width left-align track-button button-transparent"
+            title="Play {{track.title}}"
+            ng-class="{'is-active': player.playing === track.src }"
+            ng-click="playPause($index)">
+            <span class="trackDuration">
+              {{ track.duration / 1000 | hhmmss }}
+            </span>
+            <span class="trackTitle">
+              {{track.title}}
+            </span>
+            <span class="trackArtist">
+              {{track.user.username}}
+            </span>
+          </button>
+        </li>
+      </ul>
+      <div class="stickyControls">
+        <div class="playButtonContainer">
+          <button class="flex-none h3 action-button button-narrow button-transparent button-grow rounded"
+            title="Play Previous Track"
+            ng-click="previous()">
+            <svg class="icon geomicon secondaryIcons" data-icon="previous" viewBox="0 0 32 32" style="fill:currentcolor"><path d="M4 4 H8 V14 L28 4 V28 L8 18 V28 H4 z "></path></svg>
+          </button>
+          <button class="flex-none h1 action-button button-transparent button-grow rounded"
+            title="Play/Pause"
+            ng-click="playPause(index)">
+            <svg ng-if="player.playing !== track.src" class="icon geomicon" data-icon="play" viewBox="0 0 32 32" style="fill:currentcolor"><path d="M4 4 L28 16 L4 28 z "></path></svg>
+            <svg ng-if="player.playing === track.src" class="icon geomicon" data-icon="pause" viewBox="0 0 32 32" style="fill:currentcolor"><path d="M4 4 H12 V28 H4 z M20 4 H28 V28 H20 z "></path></svg>
+          </button>
+          <button class="flex-none h3 action-button mr2 button-narrow button-transparent button-grow rounded"
+            title="Play Next Track"
+            ng-click="next()">
+            <svg class="icon geomicon secondaryIcons" data-icon="next" viewBox="0 0 32 32" style="fill:currentcolor"><path d="M4 4 L24 14 V4 H28 V28 H24 V18 L4 28 z "></path></svg>
+          </button>
+        </div>
+        <div class="progressContainer">
+          <progress
+            class="progress"
+            ng-click="seek($event)"
+            ng-value="currentTime / duration || 0">
+            {{ currentTime / duration }}
+          </progress>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <h2>Archive</h2>
+  <div class="row">
+    <article ng-repeat="mix in mixes | filter: filterDefault" ng-click="mix.active = true" class="6u 12u$(xsmall)">
+      <h3><a style="cursor: pointer;">{{mix.name}}</a></h3>
+    </article>
+  </div>
+
+  <div ng-repeat="mix in mixes | filter: filterDefault" ng-show="mix.active" class="fullPagePlayer">
+    <span ng-click="mix.active = false" class="closer"></span>
+    <div plangular="{{mix.url}}" class="soundCribPlayer mb3 bg-darken-2 rounded">
       <div class="p2">
         <h3 class="h1 caps mt0">{{playlist.title}}</h3>
         <div class="flex flex-center">
@@ -60,3 +124,69 @@
       </ul>
     </div>
   </div>
+
+  </section>
+
+  <!-- Two -->
+    <section id="two">
+      <h2>Artists</h2>
+      <div class="row">
+        <article ng-repeat="artist in artists" ng-click="artist.active = true" class="6u 12u$(xsmall) artist">
+          <a class="image fit thumb"><img src="{{artist.imgURL}}" alt="{{artist.name}}" /></a>
+          <h3>{{artist.name}}</h3>
+        </article>
+      </div>
+    </section>
+
+    <div ng-repeat="artist in artists" ng-show="artist.active" class="fullPagePlayer">
+      <span ng-click="artist.active = false" class="closer"></span>
+      <div plangular="{{artist.url}}" class="soundCribPlayer mb3 bg-darken-2 rounded">
+        <div class="p2">
+          <h3 class="h1 caps mt0">{{playlist.title}}</h3>
+          <div class="flex flex-center">
+            <button class="flex-none h3 action-button button-narrow button-transparent button-grow rounded"
+              title="Play Previous Track"
+              ng-click="previous()">
+              <svg class="icon geomicon" data-icon="previous" viewBox="0 0 32 32" style="fill:currentcolor"><path d="M4 4 H8 V14 L28 4 V28 L8 18 V28 H4 z "></path></svg>
+            </button>
+            <button class="flex-none h1 action-button button-transparent button-grow rounded"
+              title="Play/Pause"
+              ng-click="playPause(index)">
+              <svg ng-if="player.playing !== track.src" class="icon geomicon" data-icon="play" viewBox="0 0 32 32" style="fill:currentcolor"><path d="M4 4 L28 16 L4 28 z "></path></svg>
+              <svg ng-if="player.playing === track.src" class="icon geomicon" data-icon="pause" viewBox="0 0 32 32" style="fill:currentcolor"><path d="M4 4 H12 V28 H4 z M20 4 H28 V28 H20 z "></path></svg>
+            </button>
+            <button class="flex-none h3 action-button mr2 button-narrow button-transparent button-grow rounded"
+              title="Play Next Track"
+              ng-click="next()">
+              <svg class="icon geomicon" data-icon="next" viewBox="0 0 32 32" style="fill:currentcolor"><path d="M4 4 L24 14 V4 H28 V28 H24 V18 L4 28 z "></path></svg>
+            </button>
+            <progress
+              class="progress"
+              ng-click="seek($event)"
+              ng-value="currentTime / duration || 0">
+              {{ currentTime / duration }}
+            </progress>
+          </div>
+        </div>
+        <ul class="list-reset">
+          <li class="overlay-track" ng-repeat="track in tracks">
+            <button
+              class="flex flex-center full-width left-align track-button button-transparent"
+              title="Play {{track.title}}"
+              ng-class="{'is-active': player.playing === track.src }"
+              ng-click="playPause($index)">
+              <span class="trackDuration">
+                {{ track.duration / 1000 | hhmmss }}
+              </span>
+              <span class="trackTitle">
+                {{track.title}}
+              </span>
+              <span class="trackArtist">
+                {{track.user.username}}
+              </span>
+            </button>
+          </li>
+        </ul>
+      </div>
+    </div>
+
